--- a/html/aboutpage.html
+++ b/html/aboutpage.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 9 Homepage</title>
-    <link rel="stylesheet" href="css/navstyles.css">
-    <link rel="stylesheet" href="css/pagestyles.css">
+    <link rel="stylesheet" href="../css/navstyles.css">
+    <link rel="stylesheet" href="../css/pagestyles.css">
 </head>
 <body>
     <header id="main-header">
-        <a href="#">
-            <img src="images/logo2-1.png" alt="logo" id="mainheaderlogo">
+        <a href="../main.html">
+            <img src="../images/logo2-1.png" alt="logo" id="mainheaderlogo">
         </a>
         <div id="hamburger">
             <div></div>
@@ -18,31 +18,31 @@
             <div></div>
         </div>
         <div id="dropdown-menu">
-            <a href="html/aboutpage.html">About</a>
-            <a href="html/menupage.html">Menu</a>
-            <a href="html/locationspage.html">Locations</a>
-            <a href="html/employmentpage.html">Employment</a>
-            <a href="html/contactpage.html">Contact</a>
-            <a href="html/storypage.html">Our Story</a>
+            <a href="aboutpage.html">About</a>
+            <a href="menupage.html">Menu</a>
+            <a href="locationspage.html">Locations</a>
+            <a href="employmentpage.html">Employment</a>
+            <a href="contactpage.html">Contact</a>
+            <a href="storypage.html">Our Story</a>
         </div>
         <ul>
             <li>
-                <a href="html/aboutpage.html">About</a>
+                <a href="aboutpage.html">About</a>
             </li>
             <li>
-                <a href="html/menupage.html">Menu</a>
+                <a href="menupage.html">Menu</a>
             </li>
             <li>
-                <a href="html/locationspage.html">Locations</a>
+                <a href="locationspage.html">Locations</a>
             </li>
             <li>
-                <a href="html/employmentpage.html">Employment</a>
+                <a href="employmentpage.html">Employment</a>
             </li>
             <li>
-                <a href="html/contactpage.html">Contact</a>
+                <a href="contactpage.html">Contact</a>
             </li>
             <li>
-                <a href="html/storypage.html">Our Story</a>
+                <a href="storypage.html">Our Story</a>
             </li>
         </ul>
         <div id="socials">
@@ -57,6 +57,7 @@
             </a>
         </div>
     </header>
-    <img src="images/baker.png" alt="img" id="hero">
+    <p>Enjoy all-you-can-eat French baked goods with our unique subscription model.</p>
+    <img src="../images/baker.png" alt="img" id="hero">
 </body>
 </html>
