--- a/html/storypage.html
+++ b/html/storypage.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="main-header">
-        <a href="../main.html">
+        <a href="../index.html">
             <img src="../images/logo2-1.png" alt="logo" id="mainheaderlogo">
         </a>
         <div id="hamburger">
